<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="hello_world" />
    <string name="app_name">Share With Us</string>
    <string name="title_activity_lobby">Share With Us</string>
    <string name="send_request_label">Send Request</string>
    <string name="join_the_team_label">Join the Team</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="request_send_label">Send</string>
    <string name="join_team_send_label">Send</string>
    <string name="names_label">Names:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_join_team">Join the Team</string>
    <string name="about_text">Share With Us is a mobile application for Delphi Method group decision making. The application initially was developed as BSc final thesis by Ventsislav Medarov, student at TU-Sofia, Telecommunications Faculty, Sofia City, 2016.</string>
    <string name="request_message_send">Message Send</string>
    <string name="join_request_send">Join Request Send</string>
    <string name="title_activity_answer_message">Answer</string>
    <string name="reject_replay_label">Reject Replay</string>
    <string name="replay_later_label">Replay Later</string>
    <string name="send_replay_label">Send Replay</string>
    <string name="discard_replay">Replay Discarded</string>
    <string name="title_activity_splash">Share With Us</string>

</resources>
