<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/names_label" />

    <EditText
        android:id="@+id/join_team_names"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/email_label" />

    <EditText
        android:id="@+id/join_team_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/phone_label" />

    <EditText
        android:id="@+id/join_team_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <Button
        android:id="@+id/join_team_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_team_send_label" >

        <requestFocus />
    </Button>

</LinearLayout>