<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <!--
	<RatingBar>
		android:id="@+id/replay_rating"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
    -->

    <EditText
        android:id="@+id/message_read"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:freezesText="true"
        android:inputType="textMultiLine"
        android:longClickable="false" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/replay_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject_replay_label" />

        <Button
            android:id="@+id/replay_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replay_later_label" />
    </LinearLayout>

    <EditText
        android:id="@+id/message_write"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/send_replay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_replay_label" />

</LinearLayout>